--- a/CS310Assignment1DemisMota/nbproject/private/private.properties
+++ b/CS310Assignment1DemisMota/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\demis\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
+user.properties.file=/Users/dmota/Library/Application Support/NetBeans/14/build.properties
